@@ -1052,7 +1052,7 @@ void setAutoWPolarName(void * ptrWPolar, void *ptrPlane)
 	{
 		pWPolar->polarName() += "-NoBodyPanels";
 	}
-	if(pWPolar->referenceDim()==XFLR5::PROJECTEDREFDIM) pWPolar->polarName() += "-proj_area";
+//	if(pWPolar->referenceDim()==XFLR5::PROJECTEDREFDIM) pWPolar->polarName() += "-proj_area";
 
 	if(pWPolar->bTilted()) pWPolar->polarName() += "-TG";
 
